<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.khoavna.shoestore.ui.shoe.modal.CreateShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dp_25"
        android:elevation="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15">

        <!--  Using constrain layout to responsive -->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/create_new_shoe"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:hint="@string/name_shoe"
            app:boxStrokeColor="@color/main_color"
            app:hintTextColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintWidth_max="488dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/price_shoe"
            app:boxStrokeColor="@color/main_color"
            app:hintTextColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="@id/txt_name"
            app:layout_constraintStart_toStartOf="@id/txt_name"
            app:layout_constraintTop_toBottomOf="@id/txt_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:text="@={viewModel.price}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/description_shoe"
            app:boxStrokeColor="@color/main_color"
            app:hintTextColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="@id/txt_price"
            app:layout_constraintStart_toStartOf="@id/txt_price"
            app:layout_constraintTop_toBottomOf="@id/txt_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="5"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:text="@={viewModel.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:backgroundTint="@color/main_color"
            android:paddingVertical="@dimen/dp_15"
            android:text="@string/create"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/dp_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_description"
            app:layout_constraintWidth_max="@dimen/dp_320" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>