<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg_onboarding"
    tools:context=".ui.onboarding.instructions.InstructionFragment">

    <!--  Using constrain layout to responsive -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/dp_125"
        app:cardElevation="@dimen/dp_20"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/tv_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/icon" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_negative"
        android:text="@string/instruction_aka_shoe_store"
        android:textAllCaps="true"
        android:textColor="#EE070707"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_detail"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_negative"
        android:gravity="center"
        android:text="@string/sub_instruction"
        android:textColor="#3C3C3C"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingHorizontal="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/dp_320"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction" />

    <Button
        android:id="@+id/btn_let_go"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTint="@color/main_color"
        android:paddingVertical="@dimen/dp_15"
        android:text="@string/let_s_do_it"
        android:textAllCaps="true"
        android:textColor="@color/main_color"
        android:layout_marginBottom="@dimen/dp_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintVertical_bias="1"
        app:strokeColor="@color/main_color"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>